# PyGlaucoMetrics

./: .Rhistory  README.md  Requirements  Test_code_MM.ipynb  Test_code_MM_v1.ipynb  Test_code_MM_v2.ipynb  Ver1.ipynb  Ver2.ipynb  __init__.py.py  demo_1_Data.ipynb  demo_2_Deviation_Analysis.ipynb  demo_3_Plotting.ipynb  demo_4_Analysis.ipynb  demo_5_progression_package_analysis.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Test_code_MM-checkpoint.ipynb  Test_code_MM_v1-checkpoint.ipynb  Test_code_MM_v2-checkpoint.ipynb  Test_code_MM_v3-checkpoint.ipynb
Mousa_code/PyGlaucoMetrics/: GL_prediction.py  instruction_app.txt
Mousa_code/PyGlaucoMetrics/.ipynb_checkpoints/: Test_code_MM_v1-checkpoint.ipynb  Test_code_MM_v2-checkpoint.ipynb  demo_4_Analysis-checkpoint.ipynb
src/PyGlaucoMetrics/: vfprogression.py  visualFields.py
src/PyGlaucoMetrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PyGlaucoMetrics/data/: normvals_cutoffs.csv  vf.schell2014.csv  vf.vfi.csv  vfctrIowaPeri.csv  vfctrSunyiu10d2.csv  vfpwgRetest24d2.csv
src/PyVisualFields/: R_dataset_export.ipynb  vf_core.py  vfprogression.py  visualFields.py
src/PyVisualFields.egg-info/: PKG-INFO
src/PyVisualFields/.ipynb_checkpoints/: Test_code_MM_v1-checkpoint.ipynb
src/PyVisualFields/data/: normvals_sunyiu24d2.csv  vf.cigts.csv  vf.plr.nouri.2012.csv  vfctrIowaPC26.csv  vfctrSunyiu24d2.csv  vfpwgSunyiu24d2.csv  vfseries.csv
